Wed Mar 22 18:59:47 1995 Keith Vetter (keithv@fusion.com)

        * hst_realm.c, realm_dom.c: windows DLL can't use fscanf so had
           to write a couple of routines to read what we need from the file.

Wed Mar 22 13:30:35 1995 Keith Vetter (keithv@fusion.com)

	* an_to_ln.c, kuserok.c: last two os routines ported to the PC.

Fri Mar 17 19:56:39 1995  John Gilmore  (gnu at toad.com)

	* Makefile.in (LDFLAGS):  Eliminate, duplicates config/pre.in.
	* localaddr.c:  Remove socket include files now handled in k5-int.h.

Wed Mar 15 12:19:47 1995 Keith Vetter (keithv@fusion.com)

	* sendto_kdc.c: made to work on the PC.

Tue Mar  7 22:15:00 1995 Keith Vetter <keithv@fusion.com>

	* sendto_kdc.c: stubbed on the PC for now.

Tue Mar  7 19:54:17 1995  Mark Eichin  <eichin@cygnus.com>

	* configure.in: take out ISODE_DEFS, ISODE_INCLUDE.

Tue Mar 7 13:35:21 1995 Keith Vetter (keithv@fusion.com)

	* *.c: ported all the c files except an_to_ln, kuserok, and
          sendto_kdc which have windows stubs.
        * Makefile.in: reflects above changes.

Wed Mar 1 17:30:00 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: made to work on the PC
	* ustime.c: added section for time on the PC
	* localaddr.c: added section for the PC--returns local IP address
	N.B. not sure how we're going to handle different machine dependent
	code changes. For now it's just added to the end of the file. Later,
	we have to decide on a solution for all.

Tue Feb 28 01:07:37 1995  John Gilmore  (gnu at toad.com)

	* *.c:  Avoid <krb5/...> includes.

Fri Feb  3 08:24:18 1995  Theodore Y. Ts'o  (tytso@dcl)

	* gmt_mktime.c (gmt_mktime): Don't double count the leap day in a
		leap year.

Sun Jan 22 18:23:37 1995  John Gilmore  (gnu@cygnus.com)

	* get_krbhst.c (krb5_get_krbhst):  Declare realm argument const,
	to match prototype.

Wed Jan 18 11:08:59 1995    <tytso@rsx-11.mit.edu>

	* sendto_kdc.c (krb5_sendto_kdc): Fix use of connected sockets;