@@ -132,12 +132,12 @@ krb5_get_realm_domain(context, realm, domain)
     (void) sprintf(scanstring, "%%%ds %%%ds",
 		   sizeof(trans_host)-1,sizeof(trans_realm)-1);
     while (1) {
-        #ifdef _WINDOWS
+#ifdef _WINDOWS
             scanval = read_2str (trans_file, trans_host, sizeof(trans_host)-1,
                 trans_realm, sizeof(trans_realm)-1);
-        #else
-            scanval = fscanf(trans_file, scanstring, trans_host, trans_realm));
-        #endif
+#else
+            scanval = fscanf(trans_file, scanstring, trans_host, trans_realm);
+#endif
 	if (scanval != 2) {
 	    if (scanval == EOF) {
 		fclose(trans_file);
